--- a/src/CSS/App.module.css
+++ b/src/CSS/App.module.css
@@ -1,3 +1,5 @@
+@import "reset.css";
+
 .title {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
